# BioHarness-Toolchain

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: README.md  environment_profile.schema.json  execution_surface_spec.schema.json  run_record.schema.json  skill_spec.schema.json  validation_report.schema.json
contracts/examples/: environment_profile.example.json  execution_surface_spec.example.json  run_record.example.json  skill_spec.example.json  validation_report.example.json
docs/: 00_overview.md  10_scope.md  12_round2_working_buffer.md  15_round1_baseline_and_round2_prep.md  20_tool_taxonomy.md  30_env_strategy.md  35_agent_runtime_reference.md  40_interface_contract.md  50_rewrite_policy.md  60_validation.md  90_roadmap.md
evals/: README.md
evals/golden_scenarios/: authoritative_writeback_requires_review.json  gpu_execution_requires_approval.json  run_record_resume_compaction.json  spatial_domain_identification_selection.json
scripts/: build_round1_expanded_outputs.py  build_round2_comparative_relaxation.py  build_round2_nep_benchmark_update.py  build_round2_targeted_consolidation.py
skills/: README.md  spatial_domain_identification.md
src/bioharness_toolchain/: __init__.py
surface_registry/: README.md
tests/: test_domain_identification_layer2_assets.py  test_round1_registry_generator.py  test_round2_agent_runtime_blueprint.py  test_round2_comparative_relaxation.py  test_round2_nep_benchmark_update.py  test_round2_targeted_consolidation.py
(+1 files in other folders)
